// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> that renders an input field should add classes when props are changed 1`] = `
<div>
  <input
    class="Input Input--context_bad Input--isBlock Input--size_large"
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`<Input> that renders an input field should render default input correctly 1`] = `
<div>
  <input
    class="Input Input--context_brand"
    type="text"
    value="Some value"
  />
</div>
`;
